--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -18,26 +18,18 @@ section {
   @apply bg-zinc-900;
 }
 
-input {
+input,
+textarea {
   @apply w-full px-3 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-red-700 focus:border-red-700;
 }
 
-[data-darkmode='true'] input {
-  @apply bg-zinc-800 border-zinc-800;
+[data-darkmode='true'] input,
+[data-darkmode='true'] textarea {
+  @apply text-white border-zinc-800 bg-zinc-800;
 }
 
 label {
   @apply block font-medium;
-}
-
-th,
-td {
-  @apply px-4 py-2 border;
-}
-
-[data-darkmode='true'] th,
-[data-darkmode='true'] td {
-  @apply border-zinc-800;
 }
 
 .button {
@@ -95,6 +87,14 @@ footer img {
 
 .gray-button span {
   @apply text-xl;
+}
+
+section > h2 {
+  @apply mb-4 text-2xl;
+}
+
+section > div {
+  @apply flex gap-4;
 }
 
 @keyframes gradient-animation {
